--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "smalot/magento-client",
+    "name": "dsilva94/magento-client-v2",
     "description": "Magento API Client (SOAP v1). Allows wrappers for each call, dependency injections and code completion.",
     "license": "MIT",
     "authors": [
@@ -8,6 +8,17 @@
             "email": "sebastien@malot.fr",
             "role": "Developer",
             "homepage": "http://www.malot.fr"
+        },
+        {
+            "name": "Diego da Silva Oliveira",
+            "email": "dsilvaoliveira94@gmail.com",
+            "role": "Developer",
+            "homepage": "http://dsilva.eti.br"
+        },
+        {
+            "name": "Kaio Teixeira",
+            "email": "kaio.teco@gmail.com",
+            "role": "Developer"
         }
     ],
     "support": {
@@ -21,7 +32,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Smalot\\Magento\\": "src/"
+            "Smalot\\V2\\Magento\\": "src/V2"
         }
     }
 }
