--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "autoload": {
         "psr-0": {
-            "Smalot\\V2\\Magento\\": "src/V2"
+            "Smalot\\V2\\": "src/V2"
         }
     }
 }
